--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@orpc/client": "^1.9.3",
     "@orpc/server": "^1.9.3",
     "@orpc/tanstack-query": "^1.9.3",
+    "@prisma/client": "^6.17.1",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -49,6 +50,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
+    "prisma": "^6.17.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
