--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@tiptap/starter-kit": "^3.7.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dompurify": "^3.3.0",
+    "html-react-parser": "^5.2.7",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.545.0",
     "motion": "^12.23.24",
